feat:优化应用启动方式